Details
-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.6
-
None
-
8f6809681 (dev), 29fc139ac (6.6), 90ccadc89 (tqtc/lts-6.5)
Description
If you are slow while you are trying to test the ReleaseWithinBounds gesturePolicy, the result might be that longPressed is emitted; after that, tapped should not be emitted (QTBUG-105810). But the intention with ReleaseWithinBounds is it should not matter how much dragging you do before you release within bounds. Probably it should not matter how much you delay before you start dragging, either.
It might be tempting to say that with this gesture policy, the longPressed feature should be disabled. But in fact, there might be a use for it: maybe someone wants to write a Button control in which the long press does something different. Perhaps the Button can be tapped normally, but with a long press you can lock it in the pressed state, or something like that. Besides, it can be controversial to change defaults that have been in place for a few versions already. So I think we should just make it possible to disable this feature. It would have been sensible from the beginning that longPressThreshold has a special meaning if set to zero, or less than zero.
Attachments
Issue Links
- relates to
-
QTBUG-65012 TapHandler: should not emit longPressed if the point is dragged
-
- Closed
-
-
QTBUG-105810 iOS: TapHandler emits clicked, even if long pressed more than StyleHint::MousePressAndHoldInterval
-
- Closed
-
For Gerrit Dashboard: QTBUG-119132 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
518338,6 | Disable TapHandler.longPressed signal if longPressThreshold == 0 | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
519522,3 | Disable TapHandler.longPressed signal if longPressThreshold == 0 | 6.6 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
519577,3 | Disable TapHandler.longPressed signal if longPressThreshold == 0 | tqtc/lts-6.5 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |