src/quick/handlers/qquicktaphandler_p.h
@@ -30,7 +30,7 @@ class Q_QUICK_PRIVATE_EXPORT QQuickTapHandler : public QQuickSinglePointHandler
     Q_PROPERTY(bool pressed READ isPressed NOTIFY pressedChanged FINAL)
     Q_PROPERTY(int tapCount READ tapCount NOTIFY tapCountChanged FINAL)
     Q_PROPERTY(qreal timeHeld READ timeHeld NOTIFY timeHeldChanged FINAL)
-    Q_PROPERTY(qreal longPressThreshold READ longPressThreshold WRITE setLongPressThreshold NOTIFY longPressThresholdChanged FINAL)
+    Q_PROPERTY(qreal longPressThreshold READ longPressThreshold WRITE setLongPressThreshold NOTIFY longPressThresholdChanged RESET resetLongPressThreshold FINAL)
     Q_PROPERTY(GesturePolicy gesturePolicy READ gesturePolicy WRITE setGesturePolicy NOTIFY gesturePolicyChanged FINAL)
     Q_PROPERTY(QQuickTapHandler::ExclusiveSignals exclusiveSignals READ exclusiveSignals WRITE setExclusiveSignals NOTIFY exclusiveSignalsChanged REVISION(6, 5) FINAL)
 
@@ -63,6 +63,7 @@ public:
 
     qreal longPressThreshold() const;
     void setLongPressThreshold(qreal longPressThreshold);
+    void resetLongPressThreshold();
 
     GesturePolicy gesturePolicy() const { return m_gesturePolicy; }
     void setGesturePolicy(GesturePolicy gesturePolicy);
@@ -92,7 +93,6 @@ protected:
 
 private:
     void setPressed(bool press, bool cancel, QPointerEvent *event, QEventPoint &point);
-    int longPressThresholdMilliseconds() const;
     void connectPreRenderSignal(bool conn = true);
     void updateTimeHeld();
 
