tests/auto/quick/pointerhandlers/qquicktaphandler/data/buttons.qml
@@ -9,19 +9,25 @@ Item {
     Button {
         objectName: "DragThreshold"
         label: "DragThreshold"
-        x: 10; y: 10; width: parent.width - 20; height: 40
+        x: 10; y: 10; width: 300; height: 40
         gesturePolicy: TapHandler.DragThreshold
     }
     Button {
         objectName: "WithinBounds"
         label: "WithinBounds"
-        x: 10; y: 60; width: parent.width - 20; height: 40
+        x: 10; y: 60; width: 300; height: 40
         gesturePolicy: TapHandler.WithinBounds
     }
     Button {
         objectName: "ReleaseWithinBounds"
         label: "ReleaseWithinBounds"
-        x: 10; y: 110; width: parent.width - 20; height: 40
+        x: 10; y: 110; width: 300; height: 40
         gesturePolicy: TapHandler.ReleaseWithinBounds
+    }
+    Button {
+        objectName: "DragWithinBounds"
+        label: "DragWithinBounds"
+        x: 10; y: 160; width: 300; height: 40
+        gesturePolicy: TapHandler.DragWithinBounds
     }
 }
